Containerization-Orchestration/2.Kubernetes/066/examples/4-allow-all-ingress.yaml
  
# Default allow all ingress traffic
# If you want to allow all traffic to all pods in a namespace (even if policies 
# are added that cause some pods to be treated as "isolated"), you can create a 
# policy that explicitly allows all traffic in that namespace.
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
  namespace: production
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
